--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 },
                 println: function(input) {
                     this.echo(input);
+                },
+                google: function(url) {
+                    this.echo('Sending to search query "' + url + '" using Google\n\n                                             ,,\n  [[;blue;black].g8&#39;&#39;&#39;&#39;bgd]                               `7MM\n[[;blue;black].dP&#39;      `M]                                 MM\n[[;blue;black]dm&#39;        `]   [[;red;black],pW&#39;Wq.]   [[;yellow;black],pW&#39;Wq.]   .P&#39;Ybmmm  MM  .gP&#39;Ya\n[[;blue;black]MM]            [[;red;black]6W     WB] [[;yellow;black]6W     WB] :MI  I8    MM ,M&#39;   Yb\n[[;blue;black]MM.     `7MMF&#39;][[;red;black]8M     M8] [[;yellow;black]8M     M8]  WmmmP&#39;    MM 8M&#39;&#39;&#39;&#39;&#39;&#39;\n[[;blue;black]`Mb       MM]  [[;red;black]YA.   ,A9] [[;yellow;black]YA.   ,A9] 8M         MM YM.    ,\n  [[;blue;black]`&#39;&#39;bmmmdPY]   [[;red;black]`Ybmd9&#39;]   [[;yellow;black]`Ybmd9&#39;]   YMMMMMb .JMML.`Mbmmd&#39;\n                                  6&#39;     dP\n                                   Ybmmmd&#39;');
+                    //setTimeout(function(){window.location="dsflk";}, 3000);
                 }
             }, {
                 greetings: 'Welcome to the Macro Terminal, version 0.0.0001.\nType help for help.'
